--- a/static/css/result.css
+++ b/static/css/result.css
@@ -1,13 +1,14 @@
 .font-res1 {
-
+    margin-left: 0
     font-family: Montserrat;
     font-style: normal;
     font-weight: bold;
     font-size: 64px;
     line-height: 76px;
-    width: 77%;
+    width: 80%;
     float: left;
     color: #FFFFFF;
+
 }
 h2  {
     font-family: Montserrat;
