--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <style>
     </style>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/static/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/png">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
