--- a/templates/result.html
+++ b/templates/result.html
@@ -1,7 +1,7 @@
 <{% extends 'base.html' %}\
 {% block head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/result.css')  }}">
-<link rel="shortcut icon" href="/static/favicon.png" type="image/png">
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/png">
 {% endblock %}
 {% block title %}
 Результат
