--- a/templates/register.html
+++ b/templates/register.html
@@ -3,64 +3,77 @@
 Регистрация
 {% endblock %}
 {% block body %}
-<div class="container mt-5">
+<div class="container">
+<main class="form-signin text-center">
   <form method="post">
-    <h1>Регистрация:</h1>
-    {% if error == 1 %}
-    <div class="error-class">
-      <h3 class="error-text-2">Выбранный вами логин занят!</h3>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <p class="fs-1 fw-bold">Вход:</p>
+            {% if error == 1 %}
+    <div class="alert alert-danger" role="alert">
+      Выбранный вами логин занят!
     </div>
     <div  class="interval"></div>
     {% endif %}
     {% if error == 2 %}
-    <div class="error-class">
-      <h3 class="error-text-2">Длина пароля должна быть не менее 8 символов!</h3>
+    <div class="alert alert-danger" role="alert">
+      Длина пароля должна быть не менее 8 символов!
     </div>
     <div  class="interval"></div>
     {% endif %}
 
     {% if error == 3 %}
-    <div class="error-class">
-      <h3 class="error-text-2">Пароли не совпадают!</h3>
+    <div class="alert alert-danger" role="alert">
+      Пароли не совпадают!
     </div>
     <div  class="interval"></div>
     {% endif %}
 
     {% if error == 4 %}
-    <div class="error-class">
-      <h3 class="error-text">С вашего устройства уже был зарегистрирован аккаунт. Войдите в него.</h3>
+    <div class="alert alert-danger" role="alert">
+      С вашего устройства уже был зарегистрирован аккаунт. Войдите в него.
     </div>
     <div  class="interval"></div>
     {% endif %}
 
     {% if error == 123 %}
-    <div class="error-class">
-      <h3 class="error-text">Произошла непридвиденная ошибка.<br>Попробуйте авторизоваться заново.</h3>
+    <div class="alert alert-danger" role="alert">
+      Произошла непридвиденная ошибка. Попробуйте зарегистрироваться заново.
     </div>
     <div  class="interval"></div>
     {% endif %}
-    <div class="form-floating" >
-      <input type="text" class="form-control" name="login" id="floatingInput" placeholder="example">
-      <label for="floatingInput" class="floating">Логин</label>
-    </div>
-    <div  class="interval"></div>
-    <div class="form-floating">
-      <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Ваш пароль">
-      <label for="floatingPassword" class="floating">Пароль</label>
-    </div>
-    <div  class="interval"></div>
-    <div class="form-floating">
+        <div class="form-floating">
+          <input type="text" class="form-control" id="floatingInput" name="login" placeholder="example">
+          <label for="floatingInput">Логин</label>
+          <div class="tab"></div>
+        </div>
+        <div class="form-floating">
+          <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Пароль">
+          <label for="floatingPassword">Пароль</label>
+        </div>
+        <div class="tab"></div>
+        <div class="form-floating">
       <input type="password" class="form-control" name="password-2" id="anotherPassword" placeholder="Повторите пароль">
       <label for="floatingPassword" class="floating">Пароль, еще раз</label>
     </div>
-    <div  class="interval"></div>
-    <div class="form-floating"><button class="btn-enter" type="submit">Регистрация</button></div>
-    <div  class="interval"></div>
-
+        <div class="tab"></div>
+        <div class="form-floating">
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Регистрация</button>
+        </div>
+        </div>
+      <div class="tab"></div>
+  </div>
   </form>
-  <form action="/login" class="form-ot">
-    <div class="form-floating"><input class="btn-non" type="submit" value="Авторизация"></div>
-  </form>
 
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form action="/login">
+        <div class="form-floating" >
+    <input type="submit"  class="w-100 btn btn-lg btn-outline-secondary " value="Авторизация"/>
+    </div>
+        </form>
+      </div>
+    </div>
+</main>
 </div>
 {% endblock %}
