--- a/templates/result.html
+++ b/templates/result.html
@@ -1,25 +1,38 @@
-<{% extends 'base.html' %}\
+{% extends 'base.html' %}
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/result.css')  }}">
-<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/png">
 {% endblock %}
 {% block title %}
 Результат
 {% endblock %}
 {% block body %}
-<div class="container mt-5">
+<div class="container">
+    <header class="d-flex justify-content-center py-3">
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="/" class="nav-link" aria-current="page">Главная</a></li>
+        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Результаты</a></li>
+        <li class="nav-item"><a href="/liked" class="nav-link">Понравившиеся</a></li>
+        <li class="nav-item"><a href="/profile" class="nav-link">Профиль</a></li>
+      </ul>
+    </header>
+  </div>
+<div class="container">
 
-    <h1 class="font-res1">Результаты поиска:</h1>
-    <input type="button" class="btn-back" onclick="history.back();" value="Назад"/>
-    {% set a = {'num': 1}%}
+    <p class="fs-1 fw-bold">Результаты поиска:</p>
+    {% if result %}
+
     {% for r in result %}
-    <h2 class="film-name">{{ r[0] }}</h2>
-    <h2 class="film-rating">{{ r[5] }}</h2>
-    <h3>{{ r[1] + ' 🠖 ' + r[2] }}</h3>
-    <h4>{{ 'Текст фразы: ' + r[3] }}</h4>
-    <h5>{{ 'О фильме: ' + r[4] }}</h5>
+    <p class="fs-2 fw-bold">{{ r[0] }}</p>
+    <p class="fs-3">{{ r[1] + ' 🠖 ' + r[2] }}</p>
+    <p class="fs-4">{{ 'Текст фразы: ' + r[3] }}</p>
+    <p class="fs-5 fw-light">{{ 'О фильме: ' + r[4] }}</p>
     <hr>
-    {% if a.update({'num': 1 + a.num}) %}{% endif %}
+    <form method="post" name="{{ r[0] }}">
+        <button type="submit" class="btn btn-outline-secondary" name="{{ r[0] }}">Secondary</button>
+        </form>
     {% endfor %}
+    {% endif %}
+    {% if not result %}
+    <p class="fs-2 fw-bold">Ничего не найдено</p>
+    {% endif %}
 </div>
 {% endblock %}
