--- a/templates/result.html
+++ b/templates/result.html
@@ -2,7 +2,7 @@
 {% block head %}
 {% endblock %}
 {% block title %}
-Результат
+Результаты | FilmFinder
 {% endblock %}
 {% block body %}
 <div class="container">
