--- a/templates/profile.html
+++ b/templates/profile.html
@@ -96,9 +96,14 @@
         </div>
         <div class="col-md">
             <p class="fs-2 fw-bolder">Другие настройки:</p>
+            <div class="alert alert-primary" id="erroAlert" role="alert" style="display:none;">
+
+            </div>
             <form id="clearhsitory"><button class="w-100 btn btn-lg btn-outline-warning" type="submit">Очистить историю</button></form>
             <div class="tab"></div>
-            <form id="clearliked"><button class="w-100 btn btn-lg btn-outline-danger" type="submit">Очистить понравившиеся</button></form>
+            <form id="clearliked"><button class="w-100 btn btn-lg btn-outline-warning" type="submit">Очистить понравившиеся</button></form>
+            <div class="tab"></div>
+            <form id="exit"><button class="w-100 btn btn-lg btn-outline-danger" type="submit">Выход</button></form>
         </div>
     </div>
 </div>
