--- a/templates/profile.html
+++ b/templates/profile.html
@@ -44,6 +44,7 @@
                     <div class="tab"></div>
             <button class="w-100 btn btn-lg btn-primary" type="submit">Получить 2FA код</button>
 
+
         </div>
         </div></form>{% endif %}
 
@@ -56,6 +57,8 @@
                     <hr><a href="/offtg" class="alert-link">Отключить</a>
             </div>
             {% endif %}
+            <div class="tab"></div>
+            <a class="w-100 btn btn-lg btn-outline-primary" href="https://t.me/film_finder_robot" target="_blank">Наш Телеграмм бот</a>
         </div>
         <div class="col-md">
             <p class="fs-2 fw-bolder">Смена пароля:</p>
