--- a/templates/liked.html
+++ b/templates/liked.html
@@ -3,10 +3,45 @@
 Логин | FilmFinder
 {% endblock %}
 {% block head %}
+
+<script src="{{ url_for('static', filename='js/result.js') }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-<script src="{{ url_for('static', filename='js/login.js') }}"></script>
 {% endblock %}
 {% block body %}
+<div class="container">
+    <header class="d-flex justify-content-center py-3">
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="/" class="nav-link" aria-current="page">Главная</a></li>
+        <li class="nav-item"><a href="/liked" class="nav-link active">Понравившиеся</a></li>
+        <li class="nav-item"><a href="/profile" class="nav-link">Профиль</a></li>
+      </ul>
+    </header>
+  </div>
+<div class="container">
 
+    <p class="fs-1 fw-bold">Понравившиеся вам:</p>
+    {% if result %}
+    {% set a = {'num': 1} %}
+    {% for r in result %}
+    <p class="fs-2 fw-bold">{{ r[1] }}</p>
+    <p class="fs-5 fw-light">{{ 'О фильме: ' + r[2] }}</p>
 
+    <form method="post" name="{{ r[0] }}" id="{{  'form' + r[0] }}">
+        {% if r[0] in like %}
+        <button type="submit" class="btn btn-outline-secondary" id="{{ 'add4d' + r[0] }}" name="hid-btn">Добавлено в понравившиеся</button>
+        {% endif %}
+        {% if r[0] not in like %}
+        <button type="submit" class="btn btn-secondary" id="{{ 'add4' + r[0] }}" name="btn">Добавить в понравившиеся</button>
+        {% endif %}
+        <button type="submit" class="btn btn-outline-secondary" id="{{ 'added' + r[0] }}" name="hid-btn" style="display:none;">Добавлено в понравившиеся</button>
+        <button type="submit" class="btn btn-secondary" id="{{ 'add' + r[0] }}" name="btn" style="display:none;">Добавить в понравившиеся</button>
+        </form>
+    {% if a.update({'num': a.num + 1}) %} {% endif %}
+    <hr>
+    {% endfor %}
+    {% endif %}
+    {% if not result %}
+    <p class="fs-2 fw-bold">Ничего не найдено</p>
+    {% endif %}
+</div>
 {% endblock %}
