--- a/templates/register.html
+++ b/templates/register.html
@@ -69,7 +69,7 @@
       <div class="col-md-6">
         <form action="/login">
         <div class="form-floating" >
-    <input type="submit"  class="w-100 btn btn-lg btn-outline-secondary " value="Авторизация"/>
+    <input type="submit"  class="w-100 btn btn-lg btn-outline-secondary " value="Вход"/>
     </div>
         </form>
       </div>
