--- a/static/scss/custom.scss
+++ b/static/scss/custom.scss
@@ -1,4 +1,8 @@
-
-
+$warning: #FF4A63;
+$body-bg: #F3F3F3;
+$body-color: #283747;
+$primary: #3C1874;
+$danger: #932432;
+$secondary: #283747;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
