--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
           crossorigin="anonymous">-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='scss/custom.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <title>{% block title %}{% endblock %}</title>
     {% block head %}{% endblock %}
 </head>
