--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,13 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='scss/custom.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/user.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <meta property="og:title" content="Film Finder" />
+    <meta property="og:url" content="https://filmfinder.ru/" />
+    <meta property="og:image" content="https://i.imgur.com/RcFmosb.png" />
+    <meta property="og:image:width" content="630" />
+<meta property="og:image:height" content="630" />
     <title>{% block title %}{% endblock %}</title>
     {% block head %}{% endblock %}
 </head>
