--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,49 @@
       </ul>
     </header>
   </div>
+
 <div class="container-lg">
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="border-radius: 20px">
+  <div class="modal-dialog" style="border-radius: 20px">
+    <div class="modal-content" style="border-radius: 20px">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">О вариантах поиска</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h6>Сервис предоставляет 3 варианта поиска:</h6>
+
+          <ul class="list-group list-group-flush">
+              <li class="list-group-item">Стандартный поиск - сервис обращает внимание на регистр и знаки препинания (самый точный поиск).</li>
+              <li class="list-group-item">Полу-нечеткий поиск - сервис обращает внимание на только на форму слова, а знаки препинания и регистр игнорирует (оптимальный вариант).</li>
+              <li class="list-group-item">Нечеткий поиск - сервис игнорирует опечатки и некорректные формы слов (больше всего вариантов).</li>
+        </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+  </div>
+</div>
+
     <p class="fs-1 fw-bold">Поиск фильма по фразе из него:</p>
     <form method="post" class="input-group mb3 input-group-lg ">
-
-                <input type="text" name="zapros" class="form-control" placeholder="Текст фразы из фильма..." aria-label="Текст фразы из фильма..." aria-describedby="button-addon2">
-                <button class="btn btn-outline-primary btn-lg" type="submit" id="button-addon2">Поиск</button>
+    <input type="text" value="False" name="if_logged" hidden>
+    <input type="text" name="zapros" class="form-control" placeholder="Текст фразы из фильма..." aria-label="Текст фразы из фильма..." aria-describedby="button-addon2">
+    <button class="btn btn-primary btn-lg" type="submit" id="button-addon2" name="submit_btn" value="half">Поиск</button>
+        <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+    <span class="visually-hidden">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu" style="border-radius: 25px;">
+    <li><button class="dropdown-item" type="submit" style="border-radius: 15px;" name="submit_btn" value="std">Стандартный поиск</button></li>
+    <li><button class="dropdown-item" type="submit" style="border-radius: 15px;" name="submit_btn" value="half">Полу-нечеткий поиск  (по умолчанию)</button></li>
+    <li><button class="dropdown-item" type="submit" style="border-radius: 15px;" name="submit_btn">Нечеткий поиск</button></li>
+    <li><hr class="dropdown-divider"></li>
+      <li><button type="button" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal" style="border-radius: 15px;">
+  Как выбрать вариант поиска
+    </button></li>
+  </ul>
 
     </form>
     <p class="fs-2 fw-bolder">История:</p>
@@ -26,7 +63,7 @@
 
         {% for r in history %}
 
-        <a href="/result?search={{ r[0] }}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center" aria-current="true">
+        <a href="/result?search={{ r[0] }}&search_type={{ r[2] }}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center" aria-current="true">
             <h6>{{ r[0] }}</h6>
             <span class="badge bg-primary rounded-pill">{{ r[1] }}</span>
         </a>
