--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 <div class="container">
 <main class="form-signin text-center">
   <form method="post">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mt-register" >
       <div class="col-md-6">
         <p class="fs-1 fw-bold">Регистрация:</p>
             {% if error == 1 %}
@@ -45,23 +45,26 @@
         <div class="form-floating">
           <input type="text" class="form-control" id="floatingInput" name="login" placeholder=" ">
           <label for="floatingInput">Логин</label>
-          <div class="tab"></div>
+      <div class="space-sm"></div>
+
         </div>
         <div class="form-floating">
           <input type="password" class="form-control" id="floatingPassword" name="password" placeholder=" ">
           <label for="floatingPassword">Пароль</label>
         </div>
+            <div class="space-sm"></div>
         <div class="tab"></div>
         <div class="form-floating">
       <input type="password" class="form-control" name="password-2" id="anotherPassword" placeholder=" ">
       <label for="floatingPassword" class="floating">Пароль, еще раз</label>
+      <div class="space-sm"></div>
     </div>
         <div class="tab"></div>
         <div class="form-floating">
         <button class="w-100 btn btn-lg btn-primary" type="submit">Регистрация</button>
         </div>
         </div>
-      <div class="tab"></div>
+      <div class="space-sm"></div>
   </div>
   </form>
 
